fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .first-section{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: aliceblue;
     position: relative;
     display: flex;
@@ -20,7 +20,7 @@ h1{
 }
 .second-section{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: antiquewhite;
     position: relative;
     display: flex;
@@ -29,7 +29,7 @@ h1{
 }
 .third-section{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: azure;
     display: flex;
     flex-direction: row;
